--- a/Frontend/wwwroot/css/style.css
+++ b/Frontend/wwwroot/css/style.css
@@ -1,3 +1,18 @@
-﻿body
-{
+﻿.separator-container {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    margin: 10px 0;
+    color: #888;
+    font-size: 0.9em;
+}
+
+.separator-line {
+    flex-grow: 1;
+    height: 1px;
+    background-color: #ccc;
+}
+
+.separator-text {
+    padding: 0 15px;
 }
